force-app/main/default/objects/Job_Application_Contact__c/Job_Application_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction object between Job_Application__c and Contact. 
Allows ability to associate multiple contacts with a single job application. This feature aids in keeping track of pivotal individuals associated with the company, such as hiring managers, recruiters, and other relevant employees. It&apos;s a crucia</description>
    <label>Job Application Contact</label>
    <nameField>
        <displayFormat>JAC-{000}</displayFormat>
        <label>Job Application Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>