force-app/main/default/objects/Job_Application_Contact__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the primary contact for the job application? Can only be one primary contact at a time.</description>
    <inlineHelpText>Is this the primary contact for the job application? Can only be one primary contact at a time.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>